- Fix css on small-screen

--- a/src/app/features/admin/components/registration-details/registration-details.component.scss
+++ b/src/app/features/admin/components/registration-details/registration-details.component.scss
@@ -29,11 +29,24 @@
         display: flex;
         flex-direction: row;
         margin-bottom: 10px;
+        flex: 1;
 
-        .photo {
+        .photo-container {
           height: 150px;
+          width: 150px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: 1px solid rgba(0, 0, 0, 0.25);
+
           @include small-screen {
             height: 100px;
+            width: 100px;
+          }
+          .photo {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
           }
         }
 
