--- a/src/app/shared/components/registrations-grid/registrations-grid.component.scss
+++ b/src/app/shared/components/registrations-grid/registrations-grid.component.scss
@@ -27,7 +27,6 @@
 
         th, td {
           vertical-align: middle;
-          z-index: 0 !important;
         }
 
         .mat-row {
@@ -68,6 +67,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        border-top: 1px solid rgba(0, 0, 0, 0.12);
 
         button {
           margin-left: 10px;
@@ -83,6 +83,7 @@
       .mat-paginator-sticky {
         display: flex;
         flex-direction: column;
+        border-top: 1px solid rgba(0, 0, 0, 0.12);
       }
     }
 
